--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -17,15 +17,7 @@
     <!-- 1119907 -->
     <div class="wrapper">
       <div class="container">
-        <p class="text">
-          A tramp is a siamese from the right perspective. We know that a
-          flitting monkey's jaw comes with it the thought that the submersed
-          break is a pamphlet. Their cream was, in this moment, a seedy
-          daffodil. The nest is a visitor. Far from the truth, they were lost
-          without the released linen that composed their step-sister. A
-          vibraphone can hardly be considered a pardine process without also
-          being an archaeology. The bay of a hyacinth becomes.
-        </p>
+        <p class="text"></p>
         <div class="Rules">
           <div class="stats">
             <div class="timeleft">
