--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -17,6 +17,7 @@
     <!-- 1119907 -->
     <div class="wrapper">
       <div class="container">
+        <input class="userinput" type="text" />
         <p class="text"></p>
         <div class="Rules">
           <div class="stats">
