--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -22,16 +22,16 @@
         <div class="Rules">
           <div class="stats">
             <div class="timeleft">
-              <p>Time Left: <span> 60</span>s</p>
+              <p>Time Left: <span class="time"> 60</span>s</p>
             </div>
             <div class="timeleft">
-              <p>Mistakes: <span> 0</span></p>
+              <p>Mistakes: <span class="mistakes"> 0</span></p>
             </div>
             <div class="timeleft">
-              <p>WPM: <span> 0</span></p>
+              <p>WPM: <span class="wpm"> 0</span></p>
             </div>
             <div class="timeleft">
-              <p>CPM: <span> 0</span></p>
+              <p>CPM: <span class="cpm"> 0</span></p>
             </div>
           </div>
           <button>Try Again</button>
