--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -19,6 +19,7 @@
       <div class="container">
         <input class="userinput" type="text" />
         <p class="text"></p>
+        <div class="underline"></div>
         <div class="Rules">
           <div class="stats">
             <div class="timeleft">
