--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -31,7 +31,7 @@
             <div class="timeleft">
               <p>WPM: <span class="wpm"> 0</span></p>
             </div>
-            <div class="timeleft">
+            <div class="timeleft last">
               <p>CPM: <span class="cpm"> 0</span></p>
             </div>
           </div>
