--- a/English Dictionary/index.html
+++ b/English Dictionary/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dicttionary</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -13,10 +14,13 @@
       </div>
       <div class="search">
         <form>
-          <p class="btnsrch">
-            <iconify-icon icon="charm:search"></iconify-icon>
-          </p>
-          <input type="text" placeholder="Search a word" id="Search" />
+          <div class="rightsearch">
+            <p class="btnsrch">
+              <iconify-icon icon="charm:search"></iconify-icon>
+            </p>
+            <input type="text" placeholder="Search a word" id="Search" />
+          </div>
+
           <p class="cancel">
             <iconify-icon icon="iconoir:cancel"></iconify-icon>
           </p>
