--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -27,9 +27,11 @@
             <input type="text" placeholder="Search a word" id="Search" />
           </div>
 
-          <p class="cancel">
+          <button class="cancel">search Word</button>
+
+          <!-- <p class="cancel">
             <iconify-icon icon="iconoir:cancel"></iconify-icon>
-          </p>
+          </p> -->
         </form>
         <p class="note">
           Type any existing word and press enter to get meaning, example,
