--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -27,7 +27,7 @@
             <input type="text" placeholder="Search a word" id="Search" />
           </div>
 
-          <button class="cancel">search Word</button>
+          <button class="cancel">search</button>
 
           <!-- <p class="cancel">
             <iconify-icon icon="iconoir:cancel"></iconify-icon>
