--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -35,7 +35,7 @@
         </form>
         <p class="note">
           Type any existing word and press enter to get meaning, example,
-          synonyms, etc.
+          synonyms, etc. <span class="bold"></span>
         </p>
       </div>
     </div>
