--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -37,6 +37,18 @@
           Type any existing word and press enter to get meaning, example,
           synonyms, etc. <span class="bold"></span>
         </p>
+        <div class="worddisplay">
+          <div class="word">
+            <h1 class="SEARCHWord">there</h1>
+            <h3 class="verb">noun //ðeː(ɹ)//</h3>
+          </div>
+          <div class="meaning">
+            <h1>Meaning</h1>
+            <h2 class="meaningword">That Place</h2>
+          </div>
+          <div class="example"></div>
+          <h1>Example</h1>
+        </div>
       </div>
     </div>
     <script src="./app.js"></script>
