--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -39,15 +39,22 @@
         </p>
         <div class="worddisplay">
           <div class="word">
-            <h1 class="SEARCHWord">there</h1>
-            <h3 class="verb">noun //ðeː(ɹ)//</h3>
+            <h2 class="SEARCHWord">there</h2>
+            <h4 class="verb">noun //ðeː(ɹ)//</h4>
+          </div>
+          <div class="sound">
+            <iconify-icon icon="akar-icons:sound-on"></iconify-icon>
           </div>
           <div class="meaning">
-            <h1>Meaning</h1>
-            <h2 class="meaningword">That Place</h2>
+            <h2>Meaning</h2>
+            <h4 class="meaningword">That Place</h4>
           </div>
           <div class="example"></div>
-          <h1>Example</h1>
+          <h2>Example</h2>
+          <h4 class="textExample">
+            She can speak English, French, and German. I can play football. Can
+            you remember your fifth birthday?
+          </h4>
         </div>
       </div>
     </div>
