--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -38,12 +38,14 @@
           synonyms, etc. <span class="bold"></span>
         </p>
         <div class="worddisplay">
-          <div class="word">
-            <h2 class="SEARCHWord">there</h2>
-            <h4 class="verb">noun //ðeː(ɹ)//</h4>
-          </div>
-          <div class="sound">
-            <iconify-icon icon="akar-icons:sound-on"></iconify-icon>
+          <div class="top">
+            <div class="word">
+              <h2 class="SEARCHWord">there</h2>
+              <h4 class="verb">noun //ðeː(ɹ)//</h4>
+            </div>
+            <div class="sound">
+              <iconify-icon icon="akar-icons:sound-on"></iconify-icon>
+            </div>
           </div>
           <div class="meaning">
             <h2>Meaning</h2>
