--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -40,7 +40,7 @@
         <div class="worddisplay">
           <div class="top">
             <div class="word">
-              <h2 class="SEARCHWord">there</h2>
+              <h2 class="SEARCHWord">There</h2>
               <h4 class="verb">noun //ðeː(ɹ)//</h4>
             </div>
             <div class="sound">
@@ -51,12 +51,13 @@
             <h2>Meaning</h2>
             <h4 class="meaningword">That Place</h4>
           </div>
-          <div class="example"></div>
-          <h2>Example</h2>
-          <h4 class="textExample">
-            She can speak English, French, and German. I can play football. Can
-            you remember your fifth birthday?
-          </h4>
+          <div class="example">
+            <h2>Example</h2>
+            <h4 class="textExample">
+              She can speak English, French, and German. I can play football.
+              Can you remember your fifth birthday?
+            </h4>
+          </div>
         </div>
       </div>
     </div>
