--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -37,28 +37,7 @@
           Type any existing word and press enter to get meaning, example,
           synonyms, etc. <span class="bold"></span>
         </p>
-        <div class="worddisplay">
-          <div class="top">
-            <div class="word">
-              <h2 class="SEARCHWord">There</h2>
-              <h4 class="verb">noun //ðeː(ɹ)//</h4>
-            </div>
-            <div class="sound">
-              <iconify-icon icon="akar-icons:sound-on"></iconify-icon>
-            </div>
-          </div>
-          <div class="meaning">
-            <h2>Meaning</h2>
-            <h4 class="meaningword">That Place</h4>
-          </div>
-          <div class="example">
-            <h2>Example</h2>
-            <h4 class="textExample">
-              She can speak English, French, and German. I can play football.
-              Can you remember your fifth birthday?
-            </h4>
-          </div>
-        </div>
+        <div class="worddisplay"></div>
       </div>
     </div>
     <script src="./app.js"></script>
