--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -27,11 +27,11 @@
             <input type="text" placeholder="Search a word" id="Search" />
           </div>
 
-          <button class="cancel">search</button>
+          <button class="searchbtn">search</button>
 
-          <!-- <p class="cancel">
+          <p class="cancel">
             <iconify-icon icon="iconoir:cancel"></iconify-icon>
-          </p> -->
+          </p>
         </form>
         <p class="note">
           Type any existing word and press enter to get meaning, example,
