--- a/22-English Dictionary/index.html
+++ b/22-English Dictionary/index.html
@@ -19,7 +19,7 @@
         <h1>English Dicttionary</h1>
       </div>
       <div class="search">
-        <form>
+        <div class="form">
           <div class="rightsearch">
             <p class="btnsrch">
               <iconify-icon icon="charm:search"></iconify-icon>
@@ -32,7 +32,7 @@
           <p class="cancel">
             <iconify-icon icon="iconoir:cancel"></iconify-icon>
           </p>
-        </form>
+        </div>
         <p class="note">
           Type any existing word and press enter to get meaning, example,
           synonyms, etc. <span class="bold"> </span>
