--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Card Game</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="view">
+      <img src="./Memory Card Game Images/img-1.png" alt="" />
+    </div>
+  </body>
 </html>
