--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -11,5 +11,9 @@
     <div class="view">
       <img src="./Memory Card Game Images/img-1.png" alt="" />
     </div>
+    <!-- <div class="center">
+      <p>ALL IS ONE</p>
+    </div> -->
+    <script src="./app.js"></script>
   </body>
 </html>
