--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <ul class="cards">
+        <li class="card">
+          <div class="front-view">
+            <iconify-icon icon="emojione-v1:question-mark"></iconify-icon>
+          </div>
+          <div class="back-view">
+            <img src="./Memory Card Game Images/img-1.png" alt="" />
+          </div>
+        </li>
+      </ul>
+    </div>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
