--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -1,26 +1,75 @@
+Skip to content code-sketch / memory-game Public Code Issues 5 Pull requests 1
+Actions Projects More memory-game/video-11/index.html @marina-ferreira
+marina-ferreira Video 11 History 1 contributor 69 lines (61 sloc) 2.68 KB
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Card Game</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <title>Memory Game</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="cards">
-        <div class="card">
-          <div class="front-view">
-            <iconify-icon icon="emojione-v1:question-mark"></iconify-icon>
-          </div>
-          <div class="back-view">
-            <img src="./Memory Card Game Images/img-1.png" alt="" />
-          </div>
-        </div>
+    <section class="memory-game">
+      <div class="memory-card" data-framework="aurelia">
+        <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
       </div>
-    </div>
-    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-    <script src="./app.js"></script>
+      <div class="memory-card" data-framework="aurelia">
+        <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+
+      <div class="memory-card" data-framework="vue">
+        <img class="front-face" src="../img/vue.svg" alt="Vue" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+      <div class="memory-card" data-framework="vue">
+        <img class="front-face" src="../img/vue.svg" alt="Vue" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+
+      <div class="memory-card" data-framework="angular">
+        <img class="front-face" src="../img/angular.svg" alt="Angular" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+      <div class="memory-card" data-framework="angular">
+        <img class="front-face" src="../img/angular.svg" alt="Angular" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+
+      <div class="memory-card" data-framework="ember">
+        <img class="front-face" src="../img/ember.svg" alt="Ember" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+      <div class="memory-card" data-framework="ember">
+        <img class="front-face" src="../img/ember.svg" alt="Ember" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+
+      <div class="memory-card" data-framework="backbone">
+        <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+      <div class="memory-card" data-framework="backbone">
+        <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="../img/react.svg" alt="React" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="../img/react.svg" alt="React" />
+        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+      </div>
+    </section>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
+Footer © 2022 GitHub, Inc. Footer navigation Terms Privacy Security Status Docs
+Contact GitHub Pricing API Training Blog About memory-game/index.html at master
+· code-sketch/memory-game
