--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -5,65 +5,65 @@
 
     <title>Memory Game</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="memory-game">
       <div class="memory-card" data-framework="aurelia">
         <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="aurelia">
         <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="vue">
         <img class="front-face" src="../img/vue.svg" alt="Vue" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="vue">
         <img class="front-face" src="../img/vue.svg" alt="Vue" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="angular">
         <img class="front-face" src="../img/angular.svg" alt="Angular" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="angular">
         <img class="front-face" src="../img/angular.svg" alt="Angular" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="ember">
         <img class="front-face" src="../img/ember.svg" alt="Ember" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="ember">
         <img class="front-face" src="../img/ember.svg" alt="Ember" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="backbone">
         <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="backbone">
         <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="react">
         <img class="front-face" src="../img/react.svg" alt="React" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="react">
         <img class="front-face" src="../img/react.svg" alt="React" />
-        <img class="back-face" src="../img/js-badge.svg" alt="JS Badge" />
+        <iconify-icon icon="bx:question-mark"></iconify-icon>
       </div>
     </section>
-
-    <script src="scripts.js"></script>
+    <script src="app.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   </body>
 </html>
