--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -10,57 +10,75 @@
   <body>
     <section class="memory-game">
       <div class="memory-card" data-framework="aurelia">
-        <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-1.png" alt="Aurelia" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="aurelia">
-        <img class="front-face" src="../img/aurelia.svg" alt="Aurelia" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-1.png" alt="Aurelia" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="vue">
-        <img class="front-face" src="../img/vue.svg" alt="Vue" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-2.png" alt="Vue" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="vue">
-        <img class="front-face" src="../img/vue.svg" alt="Vue" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-2.png" alt="Vue" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="angular">
-        <img class="front-face" src="../img/angular.svg" alt="Angular" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-3.png" alt="Angular" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="angular">
-        <img class="front-face" src="../img/angular.svg" alt="Angular" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-3.png" alt="Angular" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="ember">
-        <img class="front-face" src="../img/ember.svg" alt="Ember" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-4.png" alt="Ember" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="ember">
-        <img class="front-face" src="../img/ember.svg" alt="Ember" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-4.png" alt="Ember" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="backbone">
-        <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-5.png" alt="Backbone" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="backbone">
-        <img class="front-face" src="../img/backbone.svg" alt="Backbone" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-5.png" alt="Backbone" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
       <div class="memory-card" data-framework="react">
-        <img class="front-face" src="../img/react.svg" alt="React" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-6.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
       <div class="memory-card" data-framework="react">
-        <img class="front-face" src="../img/react.svg" alt="React" />
-        <iconify-icon icon="bx:question-mark"></iconify-icon>
+        <img class="front-face" src="./img/img-6.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
+      </div>
+
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="./img/img-7.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
+      </div>
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="./img/img-7.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
+      </div>
+
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="./img/img-8.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
+      </div>
+      <div class="memory-card" data-framework="react">
+        <img class="front-face" src="./img/img-8.png" alt="React" />
+        <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
     </section>
     <script src="app.js"></script>
