--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -9,74 +9,74 @@
   </head>
   <body>
     <section class="memory-game">
-      <div class="memory-card" data-framework="aurelia">
+      <div class="memory-card" data-id="one">
         <img class="front-face" src="./img/img-1.png" alt="Aurelia" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="aurelia">
+      <div class="memory-card" data-id="one">
         <img class="front-face" src="./img/img-1.png" alt="Aurelia" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="vue">
+      <div class="memory-card" data-id="two">
         <img class="front-face" src="./img/img-2.png" alt="Vue" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="vue">
+      <div class="memory-card" data-id="two">
         <img class="front-face" src="./img/img-2.png" alt="Vue" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="angular">
+      <div class="memory-card" data-id="angular">
         <img class="front-face" src="./img/img-3.png" alt="Angular" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="angular">
+      <div class="memory-card" data-id="angular">
         <img class="front-face" src="./img/img-3.png" alt="Angular" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="ember">
+      <div class="memory-card" data-id="ember">
         <img class="front-face" src="./img/img-4.png" alt="Ember" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="ember">
+      <div class="memory-card" data-id="ember">
         <img class="front-face" src="./img/img-4.png" alt="Ember" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="backbone">
+      <div class="memory-card" data-id="backbone">
         <img class="front-face" src="./img/img-5.png" alt="Backbone" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="backbone">
+      <div class="memory-card" data-id="backbone">
         <img class="front-face" src="./img/img-5.png" alt="Backbone" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-6.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-6.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-7.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-7.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-8.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-framework="react">
+      <div class="memory-card" data-id="react">
         <img class="front-face" src="./img/img-8.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
