--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -27,56 +27,56 @@
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="angular">
+      <div class="memory-card" data-id="three">
         <img class="front-face" src="./img/img-3.png" alt="Angular" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="angular">
+      <div class="memory-card" data-id="three">
         <img class="front-face" src="./img/img-3.png" alt="Angular" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="ember">
+      <div class="memory-card" data-id="four">
         <img class="front-face" src="./img/img-4.png" alt="Ember" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="ember">
+      <div class="memory-card" data-id="four">
         <img class="front-face" src="./img/img-4.png" alt="Ember" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="backbone">
+      <div class="memory-card" data-id="five">
         <img class="front-face" src="./img/img-5.png" alt="Backbone" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="backbone">
+      <div class="memory-card" data-id="five">
         <img class="front-face" src="./img/img-5.png" alt="Backbone" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="six">
         <img class="front-face" src="./img/img-6.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="six">
         <img class="front-face" src="./img/img-6.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="seven">
         <img class="front-face" src="./img/img-7.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="seven">
         <img class="front-face" src="./img/img-7.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
 
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="eight">
         <img class="front-face" src="./img/img-8.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
-      <div class="memory-card" data-id="react">
+      <div class="memory-card" data-id="eight">
         <img class="front-face" src="./img/img-8.png" alt="React" />
         <iconify-icon class="back-face" icon="bx:question-mark"></iconify-icon>
       </div>
