--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="stats">
+      <p class="timeLeft">Time Left: <span>10</span></p>
+      <p class="cardsflipped">Total Card Flipped <span>0</span></p>
+      <div class="matchedcard">Matched Cards <span>0</span></div>
+    </div>
     <section class="memory-game">
       <div class="memory-card" data-id="one">
         <img class="front-face" src="./img/img-1.png" alt="Aurelia" />
