--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="stats">
       <p class="timeLeft">Time Left: <span>10</span></p>
-      <p class="cardsflipped">Total Card Flipped <span>0</span></p>
-      <div class="matchedcard">Matched Cards <span>0</span></div>
+      <p class="cardsflipped">Total Card Flipped: <span>0</span></p>
+      <p class="matchedcard">Matched Cards: <span>0</span></p>
     </div>
     <section class="memory-game">
       <div class="memory-card" data-id="one">
