--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button>REFRESH</button>
     <div class="stats">
-      <p class="timeLeft">Time Left <span>10</span></p>
-      <p class="cardsflipped">Total Card Flipped <span>0</span></p>
-      <p class="matchedcard">Matched Cards <span>0</span></p>
+      <p class="timeLeft">Time Left: <span>60</span></p>
+      <p class="cardsflipped">Total Card Flipped: <span>0</span></p>
+      <p class="matchedcard">Matched Cards: <span>0</span></p>
     </div>
     <section class="memory-game">
       <div class="memory-card" data-id="one">
