--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -140,7 +140,7 @@
         </li>
       </ul>
     </div>
-
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
