--- a/23-Memory Card Game/index.html
+++ b/23-Memory Card Game/index.html
@@ -139,6 +139,11 @@
           </div>
         </li>
       </ul>
+      <div class="stats">
+        <p>Time: <span class="time">60s</span></p>
+        <p>Flips: <span class="flips">0</span></p>
+        <button>Refresh</button>
+      </div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script src="app.js"></script>
