--- a/24-Password Generator/index.html
+++ b/24-Password Generator/index.html
@@ -9,8 +9,13 @@
   <body>
     <div class="container">
       <h1>Password Generator</h1>
-
-      <div class="passwordContainer">p.password</div>
+      <div class="passwordContainer">
+        <p class="password">Pwjv(TKDJBeR</p>
+        <p class="copy"><iconify-icon icon="fa-solid:copy"></iconify-icon></p>
+      </div>
+      <input type="range" id="volume" name="volume" min="0" max="11" />
+      <label for="PassowrdLength">Passowrd Length</label>
     </div>
+    <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   </body>
 </html>
