--- a/24-Password Generator/index.html
+++ b/24-Password Generator/index.html
@@ -9,35 +9,39 @@
   </head>
   <body>
     <div class="container">
-      <h1>Password Generator</h1>
-      <div class="passwordContainer">
-        <p class="password">Pwjv(TKDJBeR</p>
-        <p class="copy"><iconify-icon icon="fa-solid:copy"></iconify-icon></p>
+      <div class="header">
+        <h1>Password Generator</h1>
       </div>
-      <input type="range" id="volume" name="volume" min="0" max="11" />
-      <label for="PassowrdLength">Passowrd Length</label>
-      <p>Password Settings</p>
-      <div class="passwordSettings">
-        <!-- lowerCase -->
-        <input type="checkbox" id="LowerCase" name="LowerCase" />
-        <label for="LowerCase">Lowercase (a-z) </label>
-        <!-- uppercase -->
-        <input type="checkbox" id="uppercase" name="uppercase" />
-        <label for="uppercase">Uppercase (A-Z) </label>
-        <!-- numbers -->
-        <input type="checkbox" id="Numbers" name="Numbers" />
-        <label for="Numbers">Numbers (0-9) </label>
-        <!-- symbols -->
-        <input type="checkbox" id="Symbols" name="Symbols" />
-        <label for="Symbols">Symbols (!-$^+) </label>
-        <!-- exclude duplicate -->
-        <input type="checkbox" id="Duplicate" name="Duplicate" />
-        <label for="Duplicate">Exclude Duplicate </label>
-        <!-- include spaces -->
-        <input type="checkbox" id="Spaces" name="Spaces" />
-        <label for="Spaces">Include Spaces </label>
+      <div class="wrap">
+        <div class="passwordContainer">
+          <p class="password">Pwjv(TKDJBeR</p>
+          <p class="copy"><iconify-icon icon="fa-solid:copy"></iconify-icon></p>
+        </div>
+        <input type="range" id="volume" name="volume" min="0" max="11" />
+        <label for="PassowrdLength">Passowrd Length</label>
+        <p>Password Settings</p>
+        <div class="passwordSettings">
+          <!-- lowerCase -->
+          <input type="checkbox" id="LowerCase" name="LowerCase" />
+          <label for="LowerCase">Lowercase (a-z) </label>
+          <!-- uppercase -->
+          <input type="checkbox" id="uppercase" name="uppercase" />
+          <label for="uppercase">Uppercase (A-Z) </label>
+          <!-- numbers -->
+          <input type="checkbox" id="Numbers" name="Numbers" />
+          <label for="Numbers">Numbers (0-9) </label>
+          <!-- symbols -->
+          <input type="checkbox" id="Symbols" name="Symbols" />
+          <label for="Symbols">Symbols (!-$^+) </label>
+          <!-- exclude duplicate -->
+          <input type="checkbox" id="Duplicate" name="Duplicate" />
+          <label for="Duplicate">Exclude Duplicate </label>
+          <!-- include spaces -->
+          <input type="checkbox" id="Spaces" name="Spaces" />
+          <label for="Spaces">Include Spaces </label>
+        </div>
+        <button>Generate Password</button>
       </div>
-      <button>Generate Password</button>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   </body>
