--- a/24-Password Generator/index.html
+++ b/24-Password Generator/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="wrap">
         <div class="passwordContainer">
-          <p class="password">Pwjv(TKDJBeR</p>
+          <p class="password">Password will Appear Here</p>
           <p class="copy"><iconify-icon icon="fa-solid:copy"></iconify-icon></p>
         </div>
         <div class="pass-length">
@@ -22,13 +22,13 @@
             <label class="title">Password Length</label>
             <span></span>
           </div>
-          <input type="range" min="1" max="30" value="15" step="1" />
+          <input id="pass" type="range" min="1" max="30" value="15" step="1" />
         </div>
         <div class="passwordSettings">
           <!-- lowerCase -->
 
           <div class="option">
-            <input type="checkbox" id="LowerCase" name="LowerCase" />
+            <input type="checkbox" checked id="LowerCase" name="LowerCase" />
             <label for="LowerCase">Lowercase (a-z) </label>
           </div>
           <!-- uppercase -->
