--- a/25-Dynamic Calendar/index.html
+++ b/25-Dynamic Calendar/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <script src="script.js" defer></script>
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
