--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -13,7 +13,7 @@
         <h1>Word Scramble</h1>
       </div>
       <div class="container">
-        <p class="word">DANGER</p>
+        <p class="word">A R D N E G A T</p>
         <p class="warning">Hint Space For planting flower and plant</p>
         <p class="time">Time Left: 0s</p>
         <input type="text" placeholder="Enter a valid word" />
