--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -13,13 +13,15 @@
         <h1>Word Scramble</h1>
       </div>
       <div class="container">
-        <p class="word">A R D N E G A T</p>
-        <p class="warning">Hint Space For planting flower and plant</p>
+        <p class="word"></p>
+        <p class="warning">
+          Hint <span class="hint">Space For planting flower and plant </span>
+        </p>
         <p class="time">Time Left: 0s</p>
         <input type="text" placeholder="Enter a valid word" />
         <div class="btns">
-          <button>Refresh Word</button>
-          <button>Check Word</button>
+          <button class="refresh">Refresh Word</button>
+          <button class="check">Check Word</button>
         </div>
       </div>
     </main>
