--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -7,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/words.js" defer></script>
-    <script src="js/script.js" defer></script>
+    <script src="./app.js" defer></script>
   </head>
   <body>
     <div class="container">
