--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -25,8 +25,8 @@
           placeholder="Enter a valid word"
         />
         <div class="buttons">
-          <button class="refresh-word">Refresh Word</button>
-          <button class="check-word">Check Word</button>
+          <button class="refresh">Refresh Word</button>
+          <button class="check">Check Word</button>
         </div>
       </div>
     </div>
