--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -5,7 +5,8 @@
     <title>Word Scramble Game | CodingNepal</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./app.js" defer></script>
+    <script src="js/words.js" defer></script>
+    <script src="js/script.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -24,8 +25,8 @@
           placeholder="Enter a valid word"
         />
         <div class="buttons">
-          <button class="refresh">Refresh Word</button>
-          <button class="check">Check Word</button>
+          <button class="refresh-word">Refresh Word</button>
+          <button class="check-word">Check Word</button>
         </div>
       </div>
     </div>
