--- a/26-Word Scramble/index.html
+++ b/26-Word Scramble/index.html
@@ -5,7 +5,7 @@
     <title>Word Scramble Game</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="js/script.js" defer></script>
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div class="container">
