--- a/27-Tic Tac Toe Game/index.html
+++ b/27-Tic Tac Toe Game/index.html
@@ -22,7 +22,7 @@
         <div class="credit">
           Created By
           <a href="https://www.youtube.com/codingnepal" target="_blank"
-            >CodingNepal</a
+            >Abdulsaabir</a
           >
         </div>
       </div>
