--- a/27-Tic Tac Toe Game/index.html
+++ b/27-Tic Tac Toe Game/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="credit">
           Created By
-          <a href="https://www.youtube.com/codingnepal" target="_blank"
+          <a href="https://www.twitter.com/saabirhaaji" target="_blank"
             >Abdulsaabir</a
           >
         </div>
