--- a/27-Tic Tac Toe Game/index.html
+++ b/27-Tic Tac Toe Game/index.html
@@ -62,6 +62,6 @@
       <div class="btn"><button>Replay</button></div>
     </div>
 
-    <script src=".js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
