--- a/29-rock-paper-scissors/index.html
+++ b/29-rock-paper-scissors/index.html
@@ -22,13 +22,13 @@
 
       <p class="result">Result Will apear here</p>
       <div class="gamedisplay">
-        <p data-id="rock" id="play">
+        <p data-id="rock" class="play">
           <iconify-icon icon="fa-solid:hand-rock"></iconify-icon>
         </p>
-        <p data-id="paper" id="play">
+        <p data-id="paper" class="play">
           <iconify-icon icon="fa-solid:hand-paper"></iconify-icon>
         </p>
-        <p data-id="Scissor" id="play">
+        <p data-id="Scissor" class="play">
           <iconify-icon icon="fa-solid:hand-scissors"></iconify-icon>
         </p>
       </div>
