--- a/27-Tic Tac Toe Game/index.html
+++ b/27-Tic Tac Toe Game/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <!-- select box -->
-    <div class="select-box">
-      <header>Tic Tac Toe</header>
+    <!-- <div class="select-box"> -->
+    <!-- <header>Tic Tac Toe</header>
       <div class="content">
         <div class="title">Select which you want to be?</div>
         <div class="options">
@@ -26,10 +26,10 @@
           >
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- playboard section -->
-    <div class="play-board">
+    <div class="play-board show">
       <div class="details">
         <div class="players">
           <span class="Xturn">X's Turn</span>
