--- a/27-Tic Tac Toe Game/index.html
+++ b/27-Tic Tac Toe Game/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Created By CodingNepal - www.youtube.com/codingnepal || www.codingnepalweb.com -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,8 +12,8 @@
   </head>
   <body>
     <!-- select box -->
-    <!-- <div class="select-box"> -->
-    <!-- <header>Tic Tac Toe</header>
+    <div class="select-box">
+      <header>Tic Tac Toe</header>
       <div class="content">
         <div class="title">Select which you want to be?</div>
         <div class="options">
@@ -26,10 +27,10 @@
           >
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- playboard section -->
-    <div class="play-board show">
+    <div class="play-board">
       <div class="details">
         <div class="players">
           <span class="Xturn">X's Turn</span>
@@ -62,6 +63,6 @@
       <div class="btn"><button>Replay</button></div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
