Rock Paper Scissors

--- a/29-rock-paper-scissors/index.html
+++ b/29-rock-paper-scissors/index.html
@@ -20,7 +20,7 @@
         <p class="COMPp">COMP</p>
       </div>
 
-      <p class="result">Result Will apear here</p>
+      <p class="result">Result Will apear here!</p>
       <div class="gamedisplay">
         <p data-id="rock" class="play">
           <iconify-icon icon="fa-solid:hand-rock"></iconify-icon>
