--- a/30-Whack-Male-game/index.html
+++ b/30-Whack-Male-game/index.html
@@ -34,11 +34,6 @@
         <div class="mole"></div>
       </div>
     </div>
-
-    <script>
-      const holes = document.querySelectorAll(".hole");
-      const scoreBoard = document.querySelector(".score");
-      const moles = document.querySelectorAll(".mole");
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
