--- a/32-Simon-game/index.html
+++ b/32-Simon-game/index.html
@@ -8,7 +8,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./style.css">
-
+  <script src="./app.js" defer></script>
   <audio id="clip1">
   	<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></source>
   </audio>
